--- a/css.css
+++ b/css.css
@@ -1,11 +1,34 @@
 p.red {
-    color: #800000;
+    color: #ff8080;
 }
 
 p.green {
-    color: #008000;
+    color: #80ff80;
 }
 
 p.blue {
-    color: #000080;
+    color: #8080ff;
+}
+
+body {
+    display: flex;               /* Enables flexbox for the body */
+    flex-direction: column;      /* Align items in a column */
+    align-items: center;         /* Center items horizontally */
+    min-height: 100vh;           /* Make the body take up the full viewport height */
+    margin: 0;                   /* Remove default margins */
+    text-align: center;          /* Center-align text */
+    font-family: Arial, sans-serif; /* Optional: Apply a clean font */
+    background-color: #000000;
+    color: #FFF
+}
+
+div.settings {
+    padding-top: 100px;
+    padding-bottom: 50px;
+}
+
+div.input input#input {
+    width: 300px;
+    height: 30px;
+    text-align: center;
 }
