--- a/css.css
+++ b/css.css
@@ -24,11 +24,52 @@ body {
 
 div.settings {
     padding-top: 100px;
-    padding-bottom: 50px;
+    padding-bottom: 25px;
+}
+
+div.input {
+    padding-top: 25px;
 }
 
 div.input input#input {
     width: 300px;
     height: 30px;
     text-align: center;
+    border-color: #FFF;
+    background-color: #000;
+    color: #FFF;
+    border-radius: 10px;
+}
+
+input#gen {
+    background-color: #80ff80;
+}
+
+input#gen:hover {
+    background-color: #C0FFC0;
+}
+
+input#solve {
+    background-color: #A080DA;
+}
+
+input#solve:hover {
+    background-color: #F0C0FF;
+}
+
+input.button {
+    color: #000;
+    padding: 5px 20px;
+    border-radius: 14px;
+    cursor: pointer;
+}
+
+body hr {
+    height: 1px;
+    width: 50%;
+}
+
+h1#relations {
+    font-family: 'Times New Roman', Times, serif;
+    font-size: 100px;
 }
