--- a/css.css
+++ b/css.css
@@ -69,6 +69,11 @@ body hr {
     width: 50%;
 }
 
+p hr {
+    height: 1px;
+    width: 720px;
+}
+
 h1#relations {
     font-family: 'Times New Roman', Times, serif;
     font-size: 100px;
